--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Trivium Grain 库示例</title>
 	<script src="TriviumGrain.js"></script>
 	<style>
@@ -51,7 +52,8 @@
 		.btn-group {
 			display: flex;
 			gap: 20px;
-			margin-bottom: 5px
+			margin-bottom: 5px;
+			flex-wrap: wrap;
 		}
 
 		button {
@@ -61,7 +63,9 @@
 			border: none;
 			border-radius: 4px;
 			cursor: pointer;
-			font-size: 16px
+			font-size: 16px;
+			flex: 1;
+			min-width: 120px;
 		}
 
 		button:hover {
@@ -74,7 +78,97 @@
 			background: #fff;
 			padding: 10px;
 			border-radius: 5px;
-			margin-top: 0px
+			margin-top: 0px;
+			width: 100%;
+		}
+
+		.key-iv-button-group {
+			display: flex;
+			align-items: center;
+			gap: 10px;
+			flex-wrap: wrap;
+		}
+
+		.key-iv-input-container {
+			flex: 1;
+			min-width: 200px;
+		}
+
+		.key-iv-button-container {
+			flex-shrink: 0;
+		}
+
+		@media (max-width: 768px) {
+			body {
+				padding: 10px;
+			}
+
+			.container {
+				padding: 15px;
+			}
+
+			.btn-group {
+				gap: 10px;
+			}
+
+			button {
+				min-width: 100px;
+				padding: 10px 15px;
+				font-size: 15px;
+			}
+
+			.key-iv-button-group {
+				flex-direction: column;
+				align-items: stretch;
+				gap: 8px;
+			}
+
+			.key-iv-input-container {
+				min-width: 100%;
+			}
+
+			.key-iv-button-container {
+				width: 100%;
+			}
+
+			.key-iv-button-container button {
+				width: 100%;
+			}
+
+			textarea {
+				min-height: 80px;
+			}
+		}
+
+		@media (max-width: 480px) {
+			.container {
+				padding: 12px;
+			}
+
+			h1 {
+				font-size: 1.5em;
+			}
+
+			.btn-group {
+				flex-direction: column;
+				gap: 8px;
+			}
+
+			.btn-group button {
+				width: 100%;
+				margin-bottom: 5px;
+			}
+
+			textarea,
+			select,
+			input {
+				padding: 8px;
+				font-size: 14px;
+			}
+
+			textarea {
+				min-height: 70px;
+			}
 		}
 	</style>
 </head>
@@ -82,7 +176,7 @@
 <body>
 	<div class="container">
 		<h1>Trivium Grain 库示例</h1>
-		<p>使用 Trivium 或 Grain v1 算法进行加密/解密，开源地址：<a href="https://github.com/fzxx/Trivium-Grain"
+		<p>使用 Trivium、Grain v1 或 Grain128-AEAD 算法进行加密/解密，开源地址：<a href="https://github.com/fzxx/Trivium-Grain"
 				target="_blank">https://github.com/fzxx/Trivium-Grain</a></p>
 
 		<div class="form-group">
@@ -90,24 +184,38 @@
 				<select id="algorithm">
 					<option value="trivium">Trivium (密钥 80位，IV 80位)</option>
 					<option value="grain">Grain v1 (密钥 80位，IV 64位)</option>
+					<option value="grain128aead">Grain128-AEAD (密钥 128位，IV 96位)</option>
 				</select>
 			</label>
 		</div>
 
 		<div class="form-group">
 			<label>密钥 (Hex)：</label>
-			<div style="display:flex;align-items:center;gap:10px">
-				<input id="keyDisplay" class="key-iv-display" style="width:420px" placeholder="请生成或输入十六进制密钥">
-				<button id="generateKey">生成随机密钥</button>
+			<div class="key-iv-button-group">
+				<div class="key-iv-input-container">
+					<input id="keyDisplay" class="key-iv-display" placeholder="请生成或输入十六进制密钥">
+				</div>
+				<div class="key-iv-button-container">
+					<button id="generateKey">生成随机密钥</button>
+				</div>
 			</div>
 		</div>
 
 		<div class="form-group">
 			<label>初始向量 (IV)：</label>
-			<div style="display:flex;align-items:center;gap:10px">
-				<input id="ivDisplay" class="key-iv-display" style="width:420px" placeholder="请生成或输入IV">
-				<button id="generateIv">生成随机IV</button>
+			<div class="key-iv-button-group">
+				<div class="key-iv-input-container">
+					<input id="ivDisplay" class="key-iv-display" placeholder="请生成或输入IV">
+				</div>
+				<div class="key-iv-button-container">
+					<button id="generateIv">生成随机IV</button>
+				</div>
 			</div>
+		</div>
+
+		<div class="form-group" id="associatedDataGroup" style="display: none;">
+			<label>附加数据 (Hex，可选)：</label>
+			<textarea id="associatedData" placeholder="请输入附加数据的十六进制字符串（可选）"></textarea>
 		</div>
 
 		<div class="form-group">
@@ -189,16 +297,33 @@
 			genIv = document.getElementById('generateIv'),
 			kDisp = document.getElementById('keyDisplay'),
 			vDisp = document.getElementById('ivDisplay'),
+			adGroup = document.getElementById('associatedDataGroup'),
+			adTxt = document.getElementById('associatedData'),
 			pTxt = document.getElementById('plaintext'),
 			cTxt = document.getElementById('ciphertext'),
 			encBtn = document.getElementById('encryptBtn'),
 			decBtn = document.getElementById('decryptBtn'),
 			clrBtn = document.getElementById('clearBtn');
 
+		function toggleAssociatedData() {
+			const algo = algSel.value;
+			if (algo === 'grain128aead') {
+				adGroup.style.display = 'block';
+			} else {
+				adGroup.style.display = 'none';
+				adTxt.value = '';
+			}
+		}
+
+		toggleAssociatedData();
+
 		genKey.onclick = () => {
 			const algo = algSel.value;
 			try {
-				if (algo === 'trivium') {
+				if (algo === 'grain128aead') {
+					const keyBytes = generateRandomBytes(16);
+					kDisp.value = bytesToHex(keyBytes);
+				} else if (algo === 'trivium') {
 					const keyBits = generateRandomBits(80);
 					kDisp.value = binArrayToHex(keyBits);
 				} else if (algo === 'grain') {
@@ -213,7 +338,10 @@
 		genIv.onclick = () => {
 			const algo = algSel.value;
 			try {
-				if (algo === 'trivium') {
+				if (algo === 'grain128aead') {
+					const ivBytes = generateRandomBytes(12);
+					vDisp.value = bytesToHex(ivBytes);
+				} else if (algo === 'trivium') {
 					const ivBits = generateRandomBits(80);
 					vDisp.value = binArrayToHex(ivBits);
 				} else if (algo === 'grain') {
@@ -224,11 +352,11 @@
 				alert('生成随机IV失败：' + e.message);
 			}
 		};
-
 		encBtn.onclick = () => {
 			const algo = algSel.value;
 			const kHex = kDisp.value.trim().replace(/\s+/g, '');
 			const vHex = vDisp.value.trim().replace(/\s+/g, '');
+			const adHex = adTxt.value.trim();
 
 			if (!kHex || !vHex) {
 				alert('请生成或输入密钥和IV');
@@ -236,17 +364,27 @@
 			}
 
 			try {
-				const key = hexToBinArray(kHex);
-				const iv = hexToBinArray(vHex);
-				const plaintext = pTxt.value || '';
-				const ciphertext = TriviumGrain.encrypt(algo, key, iv, plaintext);
+				let ciphertext;
+				if (algo === 'grain128aead') {
+					const key = hexToBytes(kHex);
+					const iv = hexToBytes(vHex);
+					const plaintext = pTxt.value ? new TextEncoder().encode(pTxt.value) : new Uint8Array(0);
+					const associatedData = adHex ? hexToBytes(adHex) : new Uint8Array(0);
+
+					ciphertext = TriviumGrain.grain128aead_encrypt(key, iv, plaintext, associatedData);
+				} else {
+					const key = hexToBinArray(kHex);
+					const iv = hexToBinArray(vHex);
+					const plaintext = pTxt.value || '';
+
+					ciphertext = TriviumGrain.encrypt(algo, key, iv, plaintext);
+				}
 				cTxt.value = bytesToHex(ciphertext);
 			} catch (e) {
 				alert('加密失败：' + e.message);
 				console.error(e);
 			}
 		};
-
 		decBtn.onclick = () => {
 			const cipherHex = cTxt.value.trim().replace(/\s+/g, '');
 			if (!cipherHex) {
@@ -257,6 +395,7 @@
 			const algo = algSel.value;
 			const kHex = kDisp.value.trim().replace(/\s+/g, '');
 			const vHex = vDisp.value.trim().replace(/\s+/g, '');
+			const adHex = adTxt.value.trim();
 
 			if (!kHex || !vHex) {
 				alert('请生成或输入密钥和IV');
@@ -264,25 +403,37 @@
 			}
 
 			try {
-				const key = hexToBinArray(kHex);
-				const iv = hexToBinArray(vHex);
-				const ciphertext = hexToBytes(cipherHex);
-				const plaintext = TriviumGrain.decrypt(algo, key, iv, ciphertext);
+				let plaintext;
+				if (algo === 'grain128aead') {
+					const key = hexToBytes(kHex);
+					const iv = hexToBytes(vHex);
+					const ciphertext = hexToBytes(cipherHex);
+					const associatedData = adHex ? hexToBytes(adHex) : new Uint8Array(0);
+
+					plaintext = TriviumGrain.grain128aead_decrypt(key, iv, ciphertext, associatedData);
+				} else {
+					const key = hexToBinArray(kHex);
+					const iv = hexToBinArray(vHex);
+					const ciphertext = hexToBytes(cipherHex);
+
+					plaintext = TriviumGrain.decrypt(algo, key, iv, ciphertext);
+				}
 				pTxt.value = new TextDecoder().decode(plaintext);
 			} catch (e) {
 				alert('解密失败：' + e.message);
 				console.error(e);
 			}
 		};
-
 		clrBtn.onclick = () => {
 			pTxt.value = '';
 			cTxt.value = '';
+			adTxt.value = '';
 		};
 
 		algSel.onchange = () => {
 			kDisp.value = '';
 			vDisp.value = '';
+			toggleAssociatedData();
 		};
 	</script>
 </body>
